<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC853131"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="248dp"
        android:layout_height="262dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/placa" />

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="#B3ACAC"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="RedirecionarConsulta"
        android:text="@string/titulo_pag_administracao"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_urgente"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/btn_filmes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="#DDAB46"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="RedirecionarFilmes"
        android:text="@string/titulo_pag_filme"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_localizacao"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="#DDAB46"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="RedirecionarLocalizacao"
        android:text="@string/titulo_pag_localizacao"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_filmes"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/txt_luz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_urgente"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/btn_urgente"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="#6D2323"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="RedirecionarUrgente"
        android:text="@string/titulo_pag_urgente"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_localizacao"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/txt_nomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

</androidx.constraintlayout.widget.ConstraintLayout>